[build-system]
requires = ["setuptools>=40.8.0", "wheel"]

[project]
name = "gpt3-prompt-to-text"
description = "gpt3-prompt-to-text is a command line program that converts a prompt into text using OpenAI's GPT-3 API."
readme = "README.md"
authors = [{name = "Clemens Vasters", email = "clemens@vasters.com"}]
dependencies = [
  "openai",
  "setuptools_scm"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/clemensv/gpt3-prompt-to-text"
homepage = "https://github.com/clemensv/gpt3-prompt-to-text"

[tool.setuptools]
packages = ["gpt3_prompt_to_text"]

[console_scripts]
gpt3-prompt-to-text = gpt3_prompt_to_text.gpt3_prompt_to_text:main

[tool.setuptools_scm]
